@@ -56,13 +56,5 @@ node {
         sh "cp ./target/app01.jar  /home/dev/despliegesjhipster/"     
         echo "*********** cambiamos directorio 03 "
         sh "pwd"
-        stage('run'){
-            dir('/home/dev/despliegesjhipster') {
-                echo "*********** cambiamos directorio 04 "
-                sh "pwd"
-                sh "ls -l"
-                sh "java --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED -jar ./app01.jar --server.servlet.context-path=/app01 &"
-            }
-        }
     }     
 }
